--- a/css&scss/comments.scss
+++ b/css&scss/comments.scss
@@ -6,6 +6,12 @@
     font-family: 'Poppins', sans-serif;
 }
 
+@mixin mobile {
+    @media screen and (max-width: 450px) {
+        @content;
+    }
+}
+
 body {
     width: 100%;
     min-height: 100vh;
@@ -18,6 +24,9 @@ body {
     width: 600px;
     min-height: 400px;
     margin: auto;
+    @include mobile {
+        margin-left: 55px;
+    }
     .form {
         .input-group textarea {
             width: 100%;
