--- a/css&scss/footer1.css
+++ b/css&scss/footer1.css
@@ -53,18 +53,38 @@ footer .content1 .box {
 }
 
 footer .content1 .topic {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 600;
   color: #fff;
   margin-bottom: 16px;
+}
+
+@media screen and (max-width: 560px) {
+  footer .content1 .topic {
+    font-size: 31px;
+    margin-bottom: 0px;
+    margin-top: 11px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  footer .content1 .topic {
+    font-size: 30px;
+  }
 }
 
 footer .content1 p {
   text-align: justify;
 }
 
+@media screen and (max-width: 560px) {
+  footer .content1 p {
+    margin-bottom: 36px;
+  }
+}
+
 footer .content1 .lower .topic {
-  margin: 24px 0 5px 0;
+  margin: 9px 0 5px 0;
 }
 
 footer .content1 .lower i {
@@ -91,13 +111,17 @@ footer .content1 .middle a {
   }
 }
 
+footer .content1 .media-icons {
+  margin-top: -18px;
+}
+
 footer .content1 .media-icons a {
   font-size: 16px;
   height: 45px;
   width: 45px;
   display: inline-block;
   text-align: center;
-  line-height: 54px;
+  line-height: 45px;
   border-radius: 5px;
   border: 2px solid #222222;
   margin: 30px 5px 0 0;
@@ -159,5 +183,9 @@ footer a {
   footer .topic {
     font-size: 29px;
   }
+}
+
+footer .email {
+  margin-top: 10px;
 }
 /*# sourceMappingURL=footer1.css.map */
