--- a/css&scss/index.scss
+++ b/css&scss/index.scss
@@ -88,7 +88,7 @@ nav {
         background-image: none;
         height: 83px;
         width: 227%;
-        margin-bottom: -161px;
+        margin-bottom: -247px;
         background-color: black;
         position: sticky;
         top: 0;
@@ -159,6 +159,14 @@ nav {
         line-height: 80px;
         padding: 0 100px;
         font-weight: bold;
+        @include mobile {
+            padding: 0 0px;
+            margin-left: 32px;
+        }
+        @include tablet {
+            padding: 0 100px;
+            margin-left: -68px;
+        }
         @include laptop {
             font-size: 30px;
             padding-left: 50px;
@@ -169,6 +177,12 @@ nav {
         margin-top: 15px;
         margin-left: 220px;
         height: 400px;
+        @include laptopx {
+            margin: auto;
+            margin-top: 15px;
+            margin-left: 102px;
+            height: 400px;
+        }
     }
     img {
         /* border: 1px solid #ddd; */
@@ -268,9 +282,23 @@ nav {
         color: var(--orange);
         // margin-top: 20px;
         @include mobile {
-            margin-left: -149px;
-            padding-top: 0px;
-            padding-left: 16px;
+            margin-left: -189px;
+            padding-top: 2px;
+            padding-left: 2px;
+            margin-bottom: 14px;
+        }
+        @include tablet {
+            margin-left: 0px;
+        }
+        @include laptop() {
+            margin-left: 28px;
+            padding-top: 5px;
+            margin-bottom: 18px;
+        }
+        @include laptopx {
+            margin-left: 28px;
+            padding-top: 5px;
+            margin-bottom: 18px;
         }
     }
     img {
@@ -283,15 +311,16 @@ nav {
         @include mobile {
             border: 1px solid #ddd;
             border-radius: 4px;
-            width: 558px;
+            border: 1px solid #ddd;
+            width: 665px;
             float: left;
-            margin-left: -136px;
-            // margin-bottom: 68px
+            height: 400px;
+            margin-left: -193px;
         }
         @include tablet {
-            width: 568px;
-            margin-left: 24px;
-            height: 358px;
+            width: 681px;
+            margin-left: -10px;
+            height: 425px;
         }
     }
     .content {
@@ -310,25 +339,28 @@ nav {
         //   margin-top: -396px;
         @include mobile {
             margin-top: -2px;
-            width: 607px;
+            font-size: 29px;
+            width: 683px;
             padding: -1%;
             font-size: 29px;
-            margin-right: -359px;
-            display: table-column;
+            margin-right: -379px;
         }
         @include tablet {
-            margin-top: 9px;
-            margin-right: 88px;
-            width: 647px;
+            margin-top: 64px;
+            width: 768px;
             float: none;
+            margin-left: 30px;
         }
         @include laptop {
-            margin-top: -346px;
+            margin-top: -364px;
             margin-right: 0px;
             width: 517px;
         }
         @include laptopxl {
             margin-right: 231px;
+        }
+        @include laptopx {
+            margin-right: -3px;
         }
     }
     .desc {
@@ -351,15 +383,17 @@ nav {
         padding-top: 0px;
         @include mobile {
             margin-left: 20px;
-            padding-top: 11px;
+            padding-top: 0px;
             margin-bottom: 14px;
+            font-size: 25px;
         }
     }
     .btnn {
         padding-top: 14px;
         margin-left: 14px;
         @include mobile {
-            margin-bottom: 20px;
+            margin-bottom: 38px;
+            padding-top: 0px;
         }
         a {
             margin-left: 8px;
@@ -377,6 +411,9 @@ nav {
             cursor: pointer;
             font-size: 1rem;
             transition: .3s ease-in;
+            @include mobile {
+                font-size: 1.5rem;
+            }
         }
     }
     .btnn :hover {
@@ -394,18 +431,32 @@ hr {
     }
 }
 
+.h_com {
+    margin-left: 596px;
+    @include mobile {
+        margin-left: 0px;
+    }
+    @include laptop {
+        margin-left: 377px;
+    }
+    @include tablet {
+        margin-left: 259px;
+    }
+}
+
 h2 {
     margin-left: 26px;
     @include mobile {
         // margin-left: -210px;
         font-size: 28px;
-        margin-left: -139px;
+        margin-left: -187px;
         font-size: 28px;
         margin-right: -198px;
-        margin-top: 241px;
+        margin-top: 280px;
     }
     @include tablet {
-        margin-top: 0px;
+        margin-top: 30px;
+        margin-left: 0px;
     }
     @include laptop {
         // margin-left: 382px;
